--- a/examples/rust.yaml
+++ b/examples/rust.yaml
@@ -53,7 +53,7 @@ jobs:
       - name: Save cache
         uses: hendrikmaus/custom-cache-action/save@master
         with:
-          paths: "${{ github.workspace }}/target /usr/share/rust/.cargo/registry/index /usr/share/rust/.cargo/registry/cache"
+          paths: "${{ github.workspace }}/target /home/runner/.cargo/registry/index /home/runner/.cargo/registry/cache"
           registry: ${{ env.CACHE_REGISTRY }}
           image: ${{ env.CACHE_IMAGE }}
           tag: ${{ env.CACHE_TAG }}
